--- a/06-Introduction to Spacy/Introduction to Spacy.ipynb
+++ b/06-Introduction to Spacy/Introduction to Spacy.ipynb
@@ -79,12 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
-    "from prettytable import PrettyTable"
+    "from prettytable import PrettyTable\n",
+    "# python -m ipykernel install --user --name=myenv --display-name \"Python (myenv)\""
    ]
   },
   {
@@ -1267,7 +1268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "nplenv",
    "language": "python",
    "name": "python3"
   },
