--- a/06-Introduction to Spacy/Introduction to Spacy.ipynb
+++ b/06-Introduction to Spacy/Introduction to Spacy.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello KGP Talkie! Let's learn NLP together. I am 24.\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"Hello KGP Talkie! Let's learn NLP together. I am 24.\"\n",
-    "\n",
-    "doc = nlp(text)"
+    "doc = nlp(text)\n",
+    "print(doc)"
    ]
   },
   {
